src/main/gen/com/enderzombi102/css/lang/squirrel/parser/SquirrelParser.java
// This is a generated file. Not intended for manual editing.
package com.enderzombi102.css.lang.squirrel.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.enderzombi102.css.lang.squirrel.psi.SquirrelElementTypes.*;
import static com.enderzombi102.css.lang.squirrel.parser.SquirrelParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class SquirrelParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return STATEMENTS(b, l + 1);
  }

  /* ********************************************************** */
  // ( IDENTIFIER ( ',' IDENTIFIER )* )?
  public static boolean ARGS(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARGS")) return false;
    Marker m = enter_section_(b, l, _NONE_, ARGS, "<args>");
    ARGS_0(b, l + 1);
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  // IDENTIFIER ( ',' IDENTIFIER )*
  private static boolean ARGS_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARGS_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = IDENTIFIER(b, l + 1);
    r = r && ARGS_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( ',' IDENTIFIER )*
  private static boolean ARGS_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARGS_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ARGS_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ARGS_0_1", c)) break;
    }
    return true;
  }

  // ',' IDENTIFIER
  private static boolean ARGS_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARGS_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_COMMA);
    r = r && IDENTIFIER(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '[' EXPR_LIST? ']'
  public static boolean ARRAY(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARRAY")) return false;
    if (!nextTokenIs(b, T_LBRACK)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_LBRACK);
    r = r && ARRAY_1(b, l + 1);
    r = r && consumeToken(b, T_RBRACK);
    exit_section_(b, m, ARRAY, r);
    return r;
  }

  // EXPR_LIST?
  private static boolean ARRAY_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ARRAY_1")) return false;
    EXPR_LIST(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // '{' ( STATEMENT ( ';' | t_NEWLINE ) )* STATEMENT? '}'
  public static boolean BLOCK(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BLOCK")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BLOCK, "<block>");
    r = consumeToken(b, T_LBRACE);
    r = r && BLOCK_1(b, l + 1);
    r = r && BLOCK_2(b, l + 1);
    r = r && consumeToken(b, T_RBRACE);
    exit_section_(b, l, m, r, false, SquirrelParser::statements_recover);
    return r;
  }

  // ( STATEMENT ( ';' | t_NEWLINE ) )*
  private static boolean BLOCK_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BLOCK_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!BLOCK_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "BLOCK_1", c)) break;
    }
    return true;
  }

  // STATEMENT ( ';' | t_NEWLINE )
  private static boolean BLOCK_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BLOCK_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = STATEMENT(b, l + 1);
    r = r && BLOCK_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ';' | t_NEWLINE
  private static boolean BLOCK_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BLOCK_1_0_1")) return false;
    boolean r;
    r = consumeToken(b, T_SEMICOLON);
    if (!r) r = consumeToken(b, T_NEWLINE);
    return r;
  }

  // STATEMENT?
  private static boolean BLOCK_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BLOCK_2")) return false;
    STATEMENT(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // ( ( 'case' EXPR ) | 'default' ) ':' STATEMENT*
  public static boolean CASE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CASE")) return false;
    if (!nextTokenIs(b, "<case>", T_CASE, T_DEFAULT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CASE, "<case>");
    r = CASE_0(b, l + 1);
    r = r && consumeToken(b, T_COLON);
    r = r && CASE_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( 'case' EXPR ) | 'default'
  private static boolean CASE_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CASE_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = CASE_0_0(b, l + 1);
    if (!r) r = consumeToken(b, T_DEFAULT);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'case' EXPR
  private static boolean CASE_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CASE_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_CASE);
    r = r && EXPR(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // STATEMENT*
  private static boolean CASE_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CASE_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!STATEMENT(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CASE_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // 'class' DEREF_EXPR ( 'extends' DEREF_EXPR )? '{' MEMBER_DECL* '}'
  public static boolean CLASS_DECL(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLASS_DECL")) return false;
    if (!nextTokenIs(b, T_CLASS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_CLASS);
    r = r && DEREF_EXPR(b, l + 1);
    r = r && CLASS_DECL_2(b, l + 1);
    r = r && consumeToken(b, T_LBRACE);
    r = r && CLASS_DECL_4(b, l + 1);
    r = r && consumeToken(b, T_RBRACE);
    exit_section_(b, m, CLASS_DECL, r);
    return r;
  }

  // ( 'extends' DEREF_EXPR )?
  private static boolean CLASS_DECL_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLASS_DECL_2")) return false;
    CLASS_DECL_2_0(b, l + 1);
    return true;
  }

  // 'extends' DEREF_EXPR
  private static boolean CLASS_DECL_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLASS_DECL_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_EXTENDS);
    r = r && DEREF_EXPR(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // MEMBER_DECL*
  private static boolean CLASS_DECL_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLASS_DECL_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!MEMBER_DECL(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CLASS_DECL_4", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // 'class' ( 'extends' DEREF_EXPR )? '{' MEMBER_DECL* '}'
  public static boolean CLASS_EXPR(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLASS_EXPR")) return false;
    if (!nextTokenIs(b, T_CLASS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_CLASS);
    r = r && CLASS_EXPR_1(b, l + 1);
    r = r && consumeToken(b, T_LBRACE);
    r = r && CLASS_EXPR_3(b, l + 1);
    r = r && consumeToken(b, T_RBRACE);
    exit_section_(b, m, CLASS_EXPR, r);
    return r;
  }

  // ( 'extends' DEREF_EXPR )?
  private static boolean CLASS_EXPR_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLASS_EXPR_1")) return false;
    CLASS_EXPR_1_0(b, l + 1);
    return true;
  }

  // 'extends' DEREF_EXPR
  private static boolean CLASS_EXPR_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLASS_EXPR_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_EXTENDS);
    r = r && DEREF_EXPR(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // MEMBER_DECL*
  private static boolean CLASS_EXPR_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLASS_EXPR_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!MEMBER_DECL(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "CLASS_EXPR_3", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // 'clone' EXPR
  public static boolean CLONE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CLONE")) return false;
    if (!nextTokenIs(b, T_CLONE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_CLONE);
    r = r && EXPR(b, l + 1);
    exit_section_(b, m, CLONE, r);
    return r;
  }

  /* ********************************************************** */
  // 'const' IDENTIFIER '=' PRIMITIVE
  public static boolean CONST(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CONST")) return false;
    if (!nextTokenIs(b, T_CONST)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_CONST);
    r = r && IDENTIFIER(b, l + 1);
    r = r && consumeToken(b, T_ASSIGN);
    r = r && PRIMITIVE(b, l + 1);
    exit_section_(b, m, CONST, r);
    return r;
  }

  /* ********************************************************** */
  // 'delegate' EXPR ':' EXPR
  public static boolean DELEGATE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DELEGATE")) return false;
    if (!nextTokenIs(b, T_DELEGATE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_DELEGATE);
    r = r && EXPR(b, l + 1);
    r = r && consumeToken(b, T_COLON);
    r = r && EXPR(b, l + 1);
    exit_section_(b, m, DELEGATE, r);
    return r;
  }

  /* ********************************************************** */
  // 'delete' DEREF_EXPR
  public static boolean DELETE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DELETE")) return false;
    if (!nextTokenIs(b, T_DELETE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_DELETE);
    r = r && DEREF_EXPR(b, l + 1);
    exit_section_(b, m, DELETE, r);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER ( '.' IDENTIFIER )* | '::' IDENTIFIER
  public static boolean DEREF_EXPR(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DEREF_EXPR")) return false;
    if (!nextTokenIs(b, "<deref expr>", T_COLONCOLON, T_IDENT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEREF_EXPR, "<deref expr>");
    r = DEREF_EXPR_0(b, l + 1);
    if (!r) r = DEREF_EXPR_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // IDENTIFIER ( '.' IDENTIFIER )*
  private static boolean DEREF_EXPR_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DEREF_EXPR_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = IDENTIFIER(b, l + 1);
    r = r && DEREF_EXPR_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( '.' IDENTIFIER )*
  private static boolean DEREF_EXPR_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DEREF_EXPR_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!DEREF_EXPR_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DEREF_EXPR_0_1", c)) break;
    }
    return true;
  }

  // '.' IDENTIFIER
  private static boolean DEREF_EXPR_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DEREF_EXPR_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_DOT);
    r = r && IDENTIFIER(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '::' IDENTIFIER
  private static boolean DEREF_EXPR_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DEREF_EXPR_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_COLONCOLON);
    r = r && IDENTIFIER(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'do' STATEMENT 'while' EXPR_GROUPED
  public static boolean DOWHILE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DOWHILE")) return false;
    if (!nextTokenIs(b, T_DO)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_DO);
    r = r && STATEMENT(b, l + 1);
    r = r && consumeToken(b, T_WHILE);
    r = r && EXPR_GROUPED(b, l + 1);
    exit_section_(b, m, DOWHILE, r);
    return r;
  }

  /* ********************************************************** */
  // 'enum' IDENTIFIER '{' ENUM_VALUE* '}'
  public static boolean ENUM(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ENUM")) return false;
    if (!nextTokenIs(b, T_ENUM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_ENUM);
    r = r && IDENTIFIER(b, l + 1);
    r = r && consumeToken(b, T_LBRACE);
    r = r && ENUM_3(b, l + 1);
    r = r && consumeToken(b, T_RBRACE);
    exit_section_(b, m, ENUM, r);
    return r;
  }

  // ENUM_VALUE*
  private static boolean ENUM_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ENUM_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ENUM_VALUE(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ENUM_3", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ( IDENTIFIER '=' PRIMITIVE ) ','?
  public static boolean ENUM_VALUE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ENUM_VALUE")) return false;
    if (!nextTokenIs(b, T_IDENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ENUM_VALUE_0(b, l + 1);
    r = r && ENUM_VALUE_1(b, l + 1);
    exit_section_(b, m, ENUM_VALUE, r);
    return r;
  }

  // IDENTIFIER '=' PRIMITIVE
  private static boolean ENUM_VALUE_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ENUM_VALUE_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = IDENTIFIER(b, l + 1);
    r = r && consumeToken(b, T_ASSIGN);
    r = r && PRIMITIVE(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ','?
  private static boolean ENUM_VALUE_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ENUM_VALUE_1")) return false;
    consumeToken(b, T_COMMA);
    return true;
  }

  /* ********************************************************** */
  // EXPR_COMMA | DELETE | CLONE | DELEGATE
  public static boolean EXPR(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR, "<expr>");
    r = EXPR_COMMA(b, l + 1);
    if (!r) r = DELETE(b, l + 1);
    if (!r) r = CLONE(b, l + 1);
    if (!r) r = DELEGATE(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // EXPR_PRIMARY ( '.' EXPR_ACCESS )?
  public static boolean EXPR_ACCESS(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_ACCESS")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_ACCESS, "<expr access>");
    r = EXPR_PRIMARY(b, l + 1);
    r = r && EXPR_ACCESS_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( '.' EXPR_ACCESS )?
  private static boolean EXPR_ACCESS_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_ACCESS_1")) return false;
    EXPR_ACCESS_1_0(b, l + 1);
    return true;
  }

  // '.' EXPR_ACCESS
  private static boolean EXPR_ACCESS_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_ACCESS_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_DOT);
    r = r && EXPR_ACCESS(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // EXPR_BIN_OR ( ( '&&' | 'in' ) EXPR )?
  public static boolean EXPR_AND_IN(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_AND_IN")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_AND_IN, "<expr and in>");
    r = EXPR_BIN_OR(b, l + 1);
    r = r && EXPR_AND_IN_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( ( '&&' | 'in' ) EXPR )?
  private static boolean EXPR_AND_IN_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_AND_IN_1")) return false;
    EXPR_AND_IN_1_0(b, l + 1);
    return true;
  }

  // ( '&&' | 'in' ) EXPR
  private static boolean EXPR_AND_IN_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_AND_IN_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = EXPR_AND_IN_1_0_0(b, l + 1);
    r = r && EXPR(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '&&' | 'in'
  private static boolean EXPR_AND_IN_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_AND_IN_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, T_COND_AND);
    if (!r) r = consumeToken(b, T_IN);
    return r;
  }

  /* ********************************************************** */
  // ( DEREF_EXPR ( '=' | '<-' ) )? EXPR_TERNARY
  public static boolean EXPR_ASSIGN(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_ASSIGN")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_ASSIGN, "<expr assign>");
    r = EXPR_ASSIGN_0(b, l + 1);
    r = r && EXPR_TERNARY(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( DEREF_EXPR ( '=' | '<-' ) )?
  private static boolean EXPR_ASSIGN_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_ASSIGN_0")) return false;
    EXPR_ASSIGN_0_0(b, l + 1);
    return true;
  }

  // DEREF_EXPR ( '=' | '<-' )
  private static boolean EXPR_ASSIGN_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_ASSIGN_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = DEREF_EXPR(b, l + 1);
    r = r && EXPR_ASSIGN_0_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '=' | '<-'
  private static boolean EXPR_ASSIGN_0_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_ASSIGN_0_0_1")) return false;
    boolean r;
    r = consumeToken(b, T_ASSIGN);
    if (!r) r = consumeToken(b, T_SEND_CHANNEL);
    return r;
  }

  /* ********************************************************** */
  // EXPR_EQ_NEQ ( '&' EXPR )?
  public static boolean EXPR_BIN_AND(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_BIN_AND")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_BIN_AND, "<expr bin and>");
    r = EXPR_EQ_NEQ(b, l + 1);
    r = r && EXPR_BIN_AND_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( '&' EXPR )?
  private static boolean EXPR_BIN_AND_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_BIN_AND_1")) return false;
    EXPR_BIN_AND_1_0(b, l + 1);
    return true;
  }

  // '&' EXPR
  private static boolean EXPR_BIN_AND_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_BIN_AND_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_BIT_AND);
    r = r && EXPR(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // EXPR_BIN_XOR ( '|' EXPR )?
  public static boolean EXPR_BIN_OR(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_BIN_OR")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_BIN_OR, "<expr bin or>");
    r = EXPR_BIN_XOR(b, l + 1);
    r = r && EXPR_BIN_OR_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( '|' EXPR )?
  private static boolean EXPR_BIN_OR_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_BIN_OR_1")) return false;
    EXPR_BIN_OR_1_0(b, l + 1);
    return true;
  }

  // '|' EXPR
  private static boolean EXPR_BIN_OR_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_BIN_OR_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_BIT_OR);
    r = r && EXPR(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // EXPR_BIN_AND ( '^' EXPR )?
  public static boolean EXPR_BIN_XOR(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_BIN_XOR")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_BIN_XOR, "<expr bin xor>");
    r = EXPR_BIN_AND(b, l + 1);
    r = r && EXPR_BIN_XOR_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( '^' EXPR )?
  private static boolean EXPR_BIN_XOR_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_BIN_XOR_1")) return false;
    EXPR_BIN_XOR_1_0(b, l + 1);
    return true;
  }

  // '^' EXPR
  private static boolean EXPR_BIN_XOR_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_BIN_XOR_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, T_BIT_XOR);
    r = r && EXPR(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // DEREF_EXPR '(' EXPR_LIST? ')'
  public static boolean EXPR_CALL(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_CALL")) return false;
    if (!nextTokenIs(b, "<expr call>", T_COLONCOLON, T_IDENT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_CALL, "<expr call>");
    r = DEREF_EXPR(b, l + 1);
    r = r && consumeToken(b, T_LPAREN);
    r = r && EXPR_CALL_2(b, l + 1);
    r = r && consumeToken(b, T_RPAREN);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // EXPR_LIST?
  private static boolean EXPR_CALL_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_CALL_2")) return false;
    EXPR_LIST(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // EXPR_ASSIGN ( ',' EXPR )?
  public static boolean EXPR_COMMA(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_COMMA")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR_COMMA, "<expr comma>");
    r = EXPR_ASSIGN(b, l + 1);
    r = r && EXPR_COMMA_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( ',' EXPR )?
  private static boolean EXPR_COMMA_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EXPR_COMMA_1")) return false;
    EXPR_COMMA_1_0(b, l + 1);
    return true;
  }
